<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.onboarding.CreateProfileViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_onboarding_shared_green_color">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/create_profile_picture_guide"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.08" />

    <org.oppia.android.app.customview.OppiaCurveBackgroundView
      android:id="@+id/create_profile_background"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:customBackgroundColor="@{@color/component_color_onboarding_create_profile_background_color}"
      app:layout_constraintTop_toBottomOf="@id/create_profile_picture_guide" />

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/create_profile_user_image_view"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:clickable="true"
      android:contentDescription="@string/create_profile_activity_current_picture_content_description"
      android:focusable="true"
      android:padding="@dimen/onboarding_profile_picture_padding"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/create_profile_picture_guide"
      app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedShape"
      app:srcCompat="@{@drawable/ic_profile_icon}"
      app:strokeColor="@color/component_color_onboarding_shared_white_color"
      app:strokeWidth="@dimen/onboarding_profile_picture_stroke_width" />

    <ImageView
      android:id="@+id/create_profile_edit_picture_icon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:contentDescription="@string/create_profile_activity_edit_icon_content_description"
      android:elevation="@dimen/onboarding_shared_elevation"
      android:paddingStart="@dimen/onboarding_shared_padding_medium"
      android:paddingTop="@dimen/onboarding_shared_padding_medium"
      android:paddingEnd="@dimen/onboarding_shared_padding_medium"
      app:layout_constraintBottom_toBottomOf="@id/create_profile_user_image_view"
      app:layout_constraintEnd_toEndOf="@id/create_profile_user_image_view"
      app:srcCompat="@drawable/create_profile_picture_icon" />

    <TextView
      android:id="@+id/create_profile_picture_prompt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_large"
      android:layout_marginEnd="@dimen/phone_shared_margin_xl"
      android:layout_marginBottom="@dimen/phone_shared_margin_xl"
      android:fontFamily="sans-serif-medium"
      android:text="@string/create_profile_activity_profile_picture_prompt"
      android:textAlignment="center"
      android:textColor="@color/component_color_onboarding_shared_text_color"
      android:textSize="@dimen/onboarding_shared_text_size_medium"
      app:layout_constraintBottom_toBottomOf="@id/create_profile_user_image_view"
      app:layout_constraintEnd_toEndOf="@id/create_profile_user_image_view"
      app:layout_constraintStart_toStartOf="@id/create_profile_user_image_view"
      app:layout_constraintTop_toTopOf="@id/create_profile_user_image_view" />

    <TextView
      android:id="@+id/create_profile_title"
      style="@style/OnboardingHeaderStyle"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_medium"
      android:layout_marginEnd="@dimen/phone_shared_margin_xl"
      android:text="@{viewModel.screenHeader}"
      android:textColor="@color/component_color_onboarding_create_profile_header_text_color"
      android:textSize="@dimen/onboarding_shared_text_size_large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_user_image_view" />

    <TextView
      android:id="@+id/create_profile_nickname_label"
      style="@style/NicknameLabelStyle"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_medium"
      android:labelFor="@id/create_profile_nickname_edittext"
      android:text="@string/create_profile_activity_nickname_label"
      app:layout_constraintBottom_toTopOf="@id/create_profile_nickname_edittext"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_title" />

    <EditText
      android:id="@+id/create_profile_nickname_edittext"
      style="@style/NicknameTextStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginEnd="@dimen/phone_shared_margin_xl"
      android:background="@{viewModel.hasErrorMessage ? @drawable/edit_text_white_background_error_border: @drawable/edit_text_white_background_with_border}"
      android:textSize="@dimen/onboarding_shared_text_size_medium"
      app:layout_constraintStart_toStartOf="parent"
      app:disableAutofill="@{true}"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_label" />

    <TextView
      android:id="@+id/create_profile_nickname_error"
      style="@style/OnboardingErrorStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginEnd="@dimen/phone_shared_margin_medium"
      android:text="@{viewModel.errorMessage}"
      android:visibility="@{viewModel.hasErrorMessage ? View.VISIBLE : View.GONE}"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_edittext" />

    <CheckBox
      android:id="@+id/create_profile_pin_check_box"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_large"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:buttonTint="@color/component_color_onboarding_create_profile_checkbox_selector"
      android:textColor="@color/component_color_onboarding_create_profile_text_color"
      android:text="@string/create_profile_activity_pin_checkbox_label"
      android:checked="@={viewModel.showPinFields}"
      android:visibility="@{viewModel.showPinUi ? View.VISIBLE : View.GONE}"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_error"/>

    <TextView
      android:id="@+id/create_profile_pin_info"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_large"
      android:text="@string/create_profile_activity_pin_info"
      android:drawableStart="@drawable/ic_info_icon"
      android:drawableTint="@color/component_color_onboarding_create_profile_info_color"
      android:drawablePadding="@dimen/onboarding_shared_padding_medium"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:textColor="@color/component_color_onboarding_create_profile_info_color"
      android:visibility="@{viewModel.showPinUi ? View.VISIBLE : View.GONE}"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_pin_check_box"/>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/create_profile_pin_constraint_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_medium"
      android:visibility="@{(viewModel.showPinUi &amp;&amp; viewModel.showPinFields) ? View.VISIBLE : View.GONE}"
      app:layout_constraintEnd_toEndOf="@id/create_profile_nickname_edittext"
      app:layout_constraintStart_toStartOf="@id/create_profile_nickname_edittext"
      app:layout_constraintTop_toBottomOf="@id/create_profile_pin_info">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_profile_pin"
        style="@style/CreateProfilePinTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/phone_shared_margin_medium"
        android:hint="@string/add_profile_input_pin"
        app:errorTextColor="@color/component_color_shared_error_color"
        app:errorMessage="@{viewModel.pinErrorMsg}"
        app:helperText="@string/add_profile_required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/create_profile_pin_edit_text"
          style="@style/CreateProfilePinTextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext"
          android:inputType="numberPassword"
          android:maxLength="3"
          android:text="@={viewModel.inputPin}" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_profile_confirm_pin"
        style="@style/CreateProfilePinTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/phone_shared_margin_medium"
        android:hint="@string/add_profile_input_confirm_pin"
        app:errorTextColor="@color/component_color_shared_error_color"
        app:errorMessage="@{viewModel.confirmPinErrorMsg}"
        app:helperText="@string/add_profile_required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_profile_pin">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/create_profile_confirm_pin_edit_text"
          style="@style/CreateProfilePinTextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionDone"
          android:inputType="numberPassword"
          android:maxLength="3"
          android:text="@={viewModel.inputConfirmPin}" />
    </com.google.android.material.textfield.TextInputLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
      android:id="@+id/onboarding_steps_count"
      style="@style/OnboardingStepCountStyle"
      android:layout_marginBottom="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_step_count_three"
      app:layout_constraintBottom_toTopOf="@id/onboarding_navigation_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_back"
      style="@style/OnboardingNavigationSecondaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_navigation_back"
      android:textColor="@color/component_color_onboarding_create_profile_back_button_text_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/onboarding_navigation_continue"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_continue"
      style="@style/OnboardingNavigationPrimaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_navigation_continue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/onboarding_navigation_back"
      app:layout_constraintTop_toTopOf="@id/onboarding_navigation_back" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
