package org.oppia.android.app.onboarding.onboardingv2

import android.app.Application
import android.content.Context
import androidx.appcompat.app.AppCompatActivity
import androidx.lifecycle.Lifecycle
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intended
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.matcher.ViewMatchers.Visibility
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.common.truth.Truth.assertThat
import dagger.Component
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.android.R
import org.oppia.android.app.activity.ActivityComponent
import org.oppia.android.app.activity.ActivityComponentFactory
import org.oppia.android.app.activity.route.ActivityRouterModule
import org.oppia.android.app.application.ApplicationComponent
import org.oppia.android.app.application.ApplicationInjector
import org.oppia.android.app.application.ApplicationInjectorProvider
import org.oppia.android.app.application.ApplicationModule
import org.oppia.android.app.application.ApplicationStartupListenerModule
import org.oppia.android.app.application.testing.TestingBuildFlavorModule
import org.oppia.android.app.devoptions.DeveloperOptionsModule
import org.oppia.android.app.devoptions.DeveloperOptionsStarterModule
import org.oppia.android.app.player.state.itemviewmodel.SplitScreenInteractionModule
import org.oppia.android.app.shim.ViewBindingShimModule
import org.oppia.android.app.translation.testing.ActivityRecreatorTestModule
import org.oppia.android.app.utility.OrientationChangeAction.Companion.orientationLandscape
import org.oppia.android.data.backends.gae.NetworkConfigProdModule
import org.oppia.android.data.backends.gae.NetworkModule
import org.oppia.android.domain.classify.InteractionsModule
import org.oppia.android.domain.classify.rules.algebraicexpressioninput.AlgebraicExpressionInputModule
import org.oppia.android.domain.classify.rules.continueinteraction.ContinueModule
import org.oppia.android.domain.classify.rules.dragAndDropSortInput.DragDropSortInputModule
import org.oppia.android.domain.classify.rules.fractioninput.FractionInputModule
import org.oppia.android.domain.classify.rules.imageClickInput.ImageClickInputModule
import org.oppia.android.domain.classify.rules.itemselectioninput.ItemSelectionInputModule
import org.oppia.android.domain.classify.rules.mathequationinput.MathEquationInputModule
import org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputModule
import org.oppia.android.domain.classify.rules.numberwithunits.NumberWithUnitsRuleModule
import org.oppia.android.domain.classify.rules.numericexpressioninput.NumericExpressionInputModule
import org.oppia.android.domain.classify.rules.numericinput.NumericInputRuleModule
import org.oppia.android.domain.classify.rules.ratioinput.RatioInputModule
import org.oppia.android.domain.classify.rules.textinput.TextInputRuleModule
import org.oppia.android.domain.exploration.ExplorationProgressModule
import org.oppia.android.domain.exploration.ExplorationStorageModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionConfigModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionProdModule
import org.oppia.android.domain.onboarding.ExpirationMetaDataRetrieverModule
import org.oppia.android.domain.oppialogger.LogStorageModule
import org.oppia.android.domain.oppialogger.LoggingIdentifierModule
import org.oppia.android.domain.oppialogger.analytics.ApplicationLifecycleModule
import org.oppia.android.domain.oppialogger.analytics.CpuPerformanceSnapshotterModule
import org.oppia.android.domain.oppialogger.logscheduler.MetricLogSchedulerModule
import org.oppia.android.domain.oppialogger.loguploader.LogReportWorkerModule
import org.oppia.android.domain.platformparameter.PlatformParameterSingletonModule
import org.oppia.android.domain.question.QuestionModule
import org.oppia.android.domain.topic.PrimeTopicAssetsControllerModule
import org.oppia.android.domain.workmanager.WorkManagerConfigurationModule
import org.oppia.android.testing.OppiaTestRule
import org.oppia.android.testing.RunOn
import org.oppia.android.testing.TestLogReportingModule
import org.oppia.android.testing.TestPlatform
import org.oppia.android.testing.espresso.EditTextInputAction
import org.oppia.android.testing.firebase.TestAuthenticationModule
import org.oppia.android.testing.junit.InitializeDefaultLocaleRule
import org.oppia.android.testing.platformparameter.TestPlatformParameterModule
import org.oppia.android.testing.robolectric.RobolectricModule
import org.oppia.android.testing.threading.TestCoroutineDispatchers
import org.oppia.android.testing.threading.TestDispatcherModule
import org.oppia.android.testing.time.FakeOppiaClockModule
import org.oppia.android.util.accessibility.AccessibilityTestModule
import org.oppia.android.util.caching.AssetModule
import org.oppia.android.util.caching.testing.CachingTestModule
import org.oppia.android.util.gcsresource.GcsResourceModule
import org.oppia.android.util.locale.LocaleProdModule
import org.oppia.android.util.logging.EventLoggingConfigurationModule
import org.oppia.android.util.logging.LoggerModule
import org.oppia.android.util.logging.SyncStatusModule
import org.oppia.android.util.logging.firebase.FirebaseLogUploaderModule
import org.oppia.android.util.networking.NetworkConnectionDebugUtilModule
import org.oppia.android.util.networking.NetworkConnectionUtilDebugModule
import org.oppia.android.util.parser.html.HtmlParserEntityTypeModule
import org.oppia.android.util.parser.image.GlideImageLoaderModule
import org.oppia.android.util.parser.image.ImageParsingModule
import org.robolectric.annotation.Config
import org.robolectric.annotation.LooperMode
import javax.inject.Inject
import javax.inject.Singleton

/** Tests for [CreateProfileFragment]. */
// FunctionName: test names are conventionally named with underscores.
@Suppress("FunctionName")
@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
@Config(
  application = CreateProfileFragmentTest.TestApplication::class,
  qualifiers = "port-xxhdpi"
)
class CreateProfileFragmentTest {
  @get:Rule
  val initializeDefaultLocaleRule = InitializeDefaultLocaleRule()

  @get:Rule
  val oppiaTestRule = OppiaTestRule()

  @Inject
  lateinit var testCoroutineDispatchers: TestCoroutineDispatchers

  @Inject
  lateinit var context: Context

  @Inject
  lateinit var editTextInputAction: EditTextInputAction

  @Before
  fun setUp() {
    Intents.init()
    setUpTestApplicationComponent()
    testCoroutineDispatchers.registerIdlingResource()
  }

  @After
  fun tearDown() {
    testCoroutineDispatchers.unregisterIdlingResource()
    Intents.release()
  }

  @Test
  fun testFragment_nicknameLabelIsDisplayed() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.create_profile_nickname_label))
        .check(matches(isDisplayed()))

      onView(withId(R.id.create_profile_nickname_label))
        .check(
          matches(
            withText(
              context.getString(
                R.string.create_profile_activity_nickname_label
              )
            )
          )
        )
    }
  }

  @Test
  fun testFragment_nicknameEditTextIsDisplayed() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.create_profile_nickname_edittext))
        .check(matches(isDisplayed()))
    }
  }

  @Test
  fun testFragment_stepCountText_isDisplayed() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.onboarding_steps_count))
        .check(matches(isDisplayed()))
      onView(withId(R.id.onboarding_steps_count))
        .check(matches(withText(R.string.onboarding_step_count_three)))
    }
  }

  @RunOn(TestPlatform.ESPRESSO) // Robolectric is usually not used to test the interaction of
  // Android components
  @Test
  fun testFragment_backButtonClicked_currentScreenIsDestroyed() {
    launchNewLearnerProfileActivity().use { scenario ->
      onView(withId(R.id.onboarding_navigation_back))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      if (scenario != null) {
        assertThat(scenario.state).isEqualTo(Lifecycle.State.DESTROYED)
      }
    }
  }

  @Test
  fun testFragment_continueButtonClicked_filledNickname_launchesLearnerIntroScreen() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.create_profile_nickname_edittext))
        .perform(
          editTextInputAction.appendText("John"),
          closeSoftKeyboard()
        )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(OnboardingLearnerIntroActivity::class.java.name))
    }
  }

  @Test
  fun testFragment_continueButtonClicked_emptyNickname_showNicknameErrorText() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withText(R.string.create_profile_activity_nickname_error))
        .check(matches(isDisplayed()))
    }
  }

  @Test
  fun testFragment_continueButtonClicked_filledNickname_afterError_launchesLearnerIntroScreen() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withText(R.string.create_profile_activity_nickname_error))
        .check(matches(isDisplayed()))

      onView(withId(R.id.create_profile_nickname_edittext))
        .perform(
          editTextInputAction.appendText("John"),
          closeSoftKeyboard()
        )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(OnboardingLearnerIntroActivity::class.java.name))
    }
  }

  @Config(qualifiers = "land")
  @Test
  fun testFragment_landscapeMode_stepCountText_isNotDisplayed() {
    launchNewLearnerProfileActivity().use {
      onView(isRoot()).perform(orientationLandscape())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_steps_count))
        .check(matches(withEffectiveVisibility(Visibility.GONE)))
    }
  }

  @RunOn(TestPlatform.ESPRESSO) // Robolectric is usually not used to test the interaction of
  // Android components
  @Test
  fun testFragment_landscapeMode_backButtonClicked_currentScreenIsDestroyed() {
    launchNewLearnerProfileActivity().use { scenario ->
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.onboarding_navigation_back))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      if (scenario != null) {
        assertThat(scenario.state).isEqualTo(Lifecycle.State.DESTROYED)
      }
    }
  }

  @Config(qualifiers = "land")
  @Test
  fun testFragment_landscapeMode_continueButtonClicked_launchesLearnerIntroScreen() {
    launchNewLearnerProfileActivity().use {
      onView(withId(R.id.create_profile_nickname_edittext))
        .perform(
          editTextInputAction.appendText("John"),
          closeSoftKeyboard()
        )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(OnboardingLearnerIntroActivity::class.java.name))
    }
  }

  @Config(qualifiers = "land")
  @Test
  fun testFragment_landscapeMode_continueButtonClicked_emptyNickname_showNicknameErrorText() {
    launchNewLearnerProfileActivity().use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withText(R.string.create_profile_activity_nickname_error))
        .check(matches(isDisplayed()))
    }
  }

  @Config(qualifiers = "land")
  @Test
  fun testFragment_landscape_continueButtonClicked_afterErrorShown_launchesLearnerIntroScreen() {
    launchNewLearnerProfileActivity().use {
      onView(isRoot()).perform(orientationLandscape())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withText(R.string.create_profile_activity_nickname_error))
        .check(matches(isDisplayed()))

      onView(withId(R.id.create_profile_nickname_edittext))
        .perform(
          editTextInputAction.appendText("John"),
          closeSoftKeyboard()
        )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.onboarding_navigation_continue))
        .perform(click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(OnboardingLearnerIntroActivity::class.java.name))
    }
  }

  private fun launchNewLearnerProfileActivity():
    ActivityScenario<CreateProfileActivity>? {
      val scenario = ActivityScenario.launch<CreateProfileActivity>(
        CreateProfileActivity.createNewLearnerProfileActivity(context)
      )
      testCoroutineDispatchers.runCurrent()
      return scenario
    }

  private fun setUpTestApplicationComponent() {
    ApplicationProvider.getApplicationContext<TestApplication>().inject(this)
  }

  // TODO(#59): Figure out a way to reuse modules instead of needing to re-declare them.
  @Singleton
  @Component(
    modules = [
      TestPlatformParameterModule::class, RobolectricModule::class,
      TestDispatcherModule::class, ApplicationModule::class,
      LoggerModule::class, ContinueModule::class, FractionInputModule::class,
      ItemSelectionInputModule::class, MultipleChoiceInputModule::class,
      NumberWithUnitsRuleModule::class, NumericInputRuleModule::class, TextInputRuleModule::class,
      DragDropSortInputModule::class, ImageClickInputModule::class, InteractionsModule::class,
      GcsResourceModule::class, GlideImageLoaderModule::class, ImageParsingModule::class,
      HtmlParserEntityTypeModule::class, QuestionModule::class, TestLogReportingModule::class,
      AccessibilityTestModule::class, LogStorageModule::class, CachingTestModule::class,
      PrimeTopicAssetsControllerModule::class, ExpirationMetaDataRetrieverModule::class,
      ViewBindingShimModule::class, RatioInputModule::class, WorkManagerConfigurationModule::class,
      ApplicationStartupListenerModule::class, LogReportWorkerModule::class,
      HintsAndSolutionConfigModule::class, HintsAndSolutionProdModule::class,
      FirebaseLogUploaderModule::class, FakeOppiaClockModule::class,
      DeveloperOptionsStarterModule::class, DeveloperOptionsModule::class,
      ExplorationStorageModule::class, NetworkModule::class, NetworkConfigProdModule::class,
      NetworkConnectionUtilDebugModule::class, NetworkConnectionDebugUtilModule::class,
      AssetModule::class, LocaleProdModule::class, ActivityRecreatorTestModule::class,
      PlatformParameterSingletonModule::class,
      NumericExpressionInputModule::class, AlgebraicExpressionInputModule::class,
      MathEquationInputModule::class, SplitScreenInteractionModule::class,
      LoggingIdentifierModule::class, ApplicationLifecycleModule::class,
      SyncStatusModule::class, MetricLogSchedulerModule::class, TestingBuildFlavorModule::class,
      EventLoggingConfigurationModule::class, ActivityRouterModule::class,
      CpuPerformanceSnapshotterModule::class, ExplorationProgressModule::class,
      TestAuthenticationModule::class
    ]
  )
  interface TestApplicationComponent : ApplicationComponent {
    @Component.Builder
    interface Builder : ApplicationComponent.Builder

    fun inject(newLearnerProfileFragmentTest: CreateProfileFragmentTest)
  }

  class TestApplication : Application(), ActivityComponentFactory, ApplicationInjectorProvider {
    private val component: TestApplicationComponent by lazy {
      DaggerCreateProfileFragmentTest_TestApplicationComponent.builder()
        .setApplication(this)
        .build() as TestApplicationComponent
    }

    fun inject(newLearnerProfileFragmentTest: CreateProfileFragmentTest) {
      component.inject(newLearnerProfileFragmentTest)
    }

    override fun createActivityComponent(activity: AppCompatActivity): ActivityComponent {
      return component.getActivityComponentBuilderProvider().get().setActivity(activity).build()
    }

    override fun getApplicationInjector(): ApplicationInjector = component
  }
}
